// Vitest Snapshot v1

exports[`RecipeStep > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: rgba(0,170,255,0.1);
  padding: 20px;
  border-radius: 10px;
  cursor: pointer;
}

.emotion-2 {
  color: #0af;
  margin: 0;
  margin-bottom: 10px;
  font-weight: 700;
  font-size: 14px;
  font-size: clamp(14px, 10.307692307692308px + 0.641025641025641vw, 18px);
}

.emotion-4 {
  text-align: justify;
  margin: 0;
  line-height: 1.4;
  white-space: pre-wrap;
  font-weight: 500;
  font-size: 14px;
  font-size: clamp(14px, 10.307692307692308px + 0.641025641025641vw, 18px);
}

<div
    class="emotion-0 emotion-1"
    role="button"
  >
    <p
      class="emotion-2 emotion-3"
    >
      Krok 2
    </p>
    <p
      class="emotion-4 emotion-5"
    >
      test
    </p>
  </div>
</DocumentFragment>
`;

exports[`RecipeStep > should render marked as done 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: rgba(0,170,255,0.1);
  padding: 20px;
  border-radius: 10px;
  cursor: pointer;
  opacity: 0.35;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.emotion-2 {
  color: #0af;
  margin: 0;
  margin-bottom: 10px;
  font-weight: 700;
  font-size: 14px;
  font-size: clamp(14px, 10.307692307692308px + 0.641025641025641vw, 18px);
}

.emotion-4 {
  text-align: justify;
  margin: 0;
  line-height: 1.4;
  white-space: pre-wrap;
  font-weight: 500;
  font-size: 14px;
  font-size: clamp(14px, 10.307692307692308px + 0.641025641025641vw, 18px);
}

<div
    class="emotion-0 emotion-1"
    role="button"
  >
    <p
      class="emotion-2 emotion-3"
    >
      Krok 2
    </p>
    <p
      class="emotion-4 emotion-5"
    >
      test
    </p>
  </div>
</DocumentFragment>
`;
